--- a/src/scss/components/_priority.scss
+++ b/src/scss/components/_priority.scss
@@ -113,7 +113,7 @@
 
 .block__button.task {
     width: 80%;
-    height: 50px;
+    height: 34px;
 }
 
 .block__button.empty {
@@ -122,7 +122,7 @@
 
 @media (max-width: 1399px) {
     .block__button.task {
-        height: 27px;  
+        height: 29px;  
         margin: 9px 0;
     }
 }
@@ -268,6 +268,7 @@
     width: 200px;
     height: 55px;
     border-radius: 15px;
+    margin: 0;
 
     font-family: 'Roboto';
     font-style: normal;
@@ -298,6 +299,8 @@
         width: 136px;
         height: 36px;
         font-size: 22px;
+
+        border-radius: 12px;
     }
 }
 
@@ -508,12 +511,9 @@
     font-size: 16px;
 
     color: #E1E1E1;
+    position: relative;
+    bottom: 1.5px;
 }
-
-// .block__button_text.bottom {
-//     position: relative;
-//     bottom: 1px;
-// }
 
 @media (max-width: 1199px) {
     .block__button_text {
