--- a/src/scss/abstracts/_all.scss
+++ b/src/scss/abstracts/_all.scss
@@ -9,6 +9,7 @@
 @import '../components/statusName';
 @import '../components/settings';
 @import '../components/tasksLife';
+@import '../components/prettyButton';
 
 @import '../components/registerForm';
 @import '../components/line';
