--- a/src/scss/components/_desk.scss
+++ b/src/scss/components/_desk.scss
@@ -136,7 +136,6 @@
     width: 20px;
     height: 20px;
     background-color: #80E095;
-    margin-bottom: 24px;
     border-radius: 50%;
     cursor: pointer;
     border: none;
@@ -151,7 +150,15 @@
 
 @media (max-width: 1399px) {
     .block__plus {
-        margin-bottom: 20px;
+        width: 18px;
+        height: 18px;
+    }
+}
+
+@media (max-width: 1199px) {
+    .block__plus {
+        width: 17px;
+        height: 17px;
     }
 }
 
@@ -159,7 +166,6 @@
     .block__plus {
         width: 16px;
         height: 16px;
-        margin-bottom: 22px;
     }
 }
 
@@ -167,13 +173,13 @@
     .block__plus {
         width: 19px;
         height: 19px;
-        margin-bottom: 17px;
     }
 }
 
 @media (max-width: 460px) {
     .block__plus {
-        margin-bottom: 10px;
+        width: 18px;
+        height: 18px;
     }
 }
 
@@ -231,11 +237,11 @@
     width: 20px;
     height: 20px;
     background-color: #F45252;
-    margin: 0 5px 22px 0;
     border-radius: 50%;
     cursor: pointer;
     border: none;
     padding: 0;
+    margin-left: 5px;
 
     display: flex;
     align-items: center;
@@ -244,15 +250,17 @@
     box-shadow: -0.5px 0.5px 1px rgba(209, 70, 70, 0.2), 0.5px -0.5px 1px rgba(209, 70, 70, 0.2), -0.5px -0.5px 1px rgba(255, 86, 86, 0.9), 0.5px 0.5px 2px rgba(209, 70, 70, 0.9), inset 0.5px 0.5px 1px rgba(255, 86, 86, 0.3), inset -0.5px -0.5px 1px rgba(209, 70, 70, 0.5);
 }
 
-.block__minus.left {
-    margin-left: 0 auto;
-}
-
 @media (max-width: 1399px) {
     .block__minus {
-        width: 19px;
-        height: 19px;
-        margin-bottom: 20px;
+        width: 18px;
+        height: 18px;
+    }
+}
+
+@media (max-width: 1199px) {
+    .block__minus {
+        width: 17px;
+        height: 17px;
     }
 }
 
@@ -260,7 +268,6 @@
     .block__minus {
         width: 16px;
         height: 16px;
-        margin-bottom: 22px;
     }
 }
 
@@ -268,15 +275,13 @@
     .block__minus {
         width: 19px;
         height: 19px;
-        margin-bottom: 17px;
     }
 }
 
 @media (max-width: 460px) {
     .block__minus {
-        width: 19px;
-        height: 19px;
-        margin-bottom: 11px;
+        width: 18px;
+        height: 18px;
     }
 }
 
@@ -316,6 +321,7 @@
     box-shadow: 1px 1px 2px rgba(244, 244, 244, 0.3), -1px -1px 2px rgba(204, 204, 204, 0.5), inset -6px 6px 12px rgba(204, 204, 204, 0.2), inset 6px -6px 12px rgba(204, 204, 204, 0.2), inset -6px -6px 12px rgba(244, 244, 244, 0.9), inset 6px 6px 15px rgba(204, 204, 204, 0.9);
     border-radius: 23px;
     padding: 25px;
+    margin-top: 18px;
 
     display: flex;
     flex-direction: column;
@@ -340,6 +346,7 @@
     }
 
     .block__inner { 
+        margin-top: 14px;
         padding: 22px;
     }
 }
@@ -350,6 +357,7 @@
     }
 
     .block__inner { 
+        margin-top: 13px;
         padding: 18px;
     }
 }
