--- a/src/scss/components/_static.scss
+++ b/src/scss/components/_static.scss
@@ -30,6 +30,14 @@
     }
 }
 
+@media (max-height: 800px) {
+    @media (max-width: 767px) {
+        .demo {
+            margin: 0;
+        }
+    }
+}
+
 .demo__description {
     font-family: 'Roboto';
     font-style: normal;
@@ -63,20 +71,20 @@
 
 @media (max-width: 767px) {
     .demo__description {
-        margin: -23px 50px 20px 42px
+        margin: -23px 75px 20px 42px
     }
 }
 
 @media (max-width: 415px) {
     .demo__description {
         font-size: 19px;
-        margin: -20px 50px 20px 28px
+        margin: -20px 64px 20px 28px
     }
 }
 
 @media (max-height: 800px) {
     .demo__description {
-        margin: -28px 0 23px 50px
+        margin: -28px 70px 23px 50px
     }
 }
 
