--- a/src/scss/components/_login.scss
+++ b/src/scss/components/_login.scss
@@ -19,6 +19,7 @@
 @media (max-width: 1399px) {
     .login {
         margin-bottom: -10px;
+        margin-top: 20px;
     }
 }
 
@@ -27,8 +28,8 @@
         width: 110px;
         height: 60px;
 
-        margin-bottom: -17px;
-        margin-top: 25px;
+        margin-bottom: -4px;
+        margin-top: 15px;
         padding: 0 13px 0 12px
     }
 }
@@ -49,6 +50,13 @@
     .login__user_img {
         width: 40px;
         height: 40px;
+    }
+}
+
+@media (max-height: 800px) {
+    .login {
+        margin-bottom: -3px;
+        margin-top: 15px;
     }
 }
 
