--- a/src/scss/components/_loginForm.scss
+++ b/src/scss/components/_loginForm.scss
@@ -502,6 +502,10 @@
     word-break: break-all;
 }
 
+.error_info.margin-bot {
+    margin-bottom: 2px;
+}
+
 .error_info.status {
     font-size: 14px;
     margin-right: 10px;
