--- a/src/scss/components/_priority.scss
+++ b/src/scss/components/_priority.scss
@@ -61,7 +61,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 23px 0 8px 0;
+    margin: 8px 0;
 }
 
 @media (max-width: 1399px) {
