add confirmEmail component

--- a/src/scss/components/_loginForm.scss
+++ b/src/scss/components/_loginForm.scss
@@ -666,13 +666,13 @@
     }
 }
 
-@media (max-width: 460px) {
-    .css-1mngnt6 {
-        border: 2.3px solid #E0E0E0 !important;
-        height: 20px !important;
-        width: 39px !important;
-    }
-}
+// @media (max-width: 460px) {
+//     .css-1mngnt6 {
+//         border: 2.3px solid #E0E0E0 !important;
+//         height: 20px !important;
+//         width: 39px !important;
+//     }
+// }
 
 .css-1mngnt6::after {
     background: #E0E0E0 !important;
@@ -702,20 +702,20 @@
     }
 }
 
-@media (max-width: 460px) {
-    .css-1mngnt6::after {
-        top: 3px !important;
-        left: 2px !important;
-        width: 11px !important;
-        height: 11px !important;
-    }
-}
+// @media (max-width: 460px) {
+//     .css-1mngnt6::after {
+//         top: 3px !important;
+//         left: 2px !important;
+//         width: 11px !important;
+//         height: 11px !important;
+//     }
+// }
 
-@media (max-width: 415px) {
-    .css-1mngnt6::after {
-        top: 2.5px !important;
-    }
-}
+// @media (max-width: 415px) {
+//     .css-1mngnt6::after {
+//         top: 2.5px !important;
+//     }
+// }
 
 .css-1mngnt6::before {
     background: #8A8383 !important;
@@ -743,20 +743,20 @@
     }
 }
 
-@media (max-width: 460px) {
-    .css-1mngnt6::before {
-        top: 6.4px !important;
-        left: 5.2px !important;
-        width: 3.2px !important;
-        height: 3.2px !important;
-    }
-}
+// @media (max-width: 460px) {
+//     .css-1mngnt6::before {
+//         top: 6.4px !important;
+//         left: 5.2px !important;
+//         width: 3.2px !important;
+//         height: 3.2px !important;
+//     }
+// }
 
-@media (max-width: 415px) {
-    .css-1mngnt6::before {
-        top: 5.8px !important;
-    }
-}
+// @media (max-width: 415px) {
+//     .css-1mngnt6::before {
+//         top: 5.8px !important;
+//     }
+// }
 /*--------------------- */
 
 /*----toggle_Active---- */
@@ -785,13 +785,13 @@
     }
 }
 
-@media (max-width: 460px) {
-    .css-hqpog9 {
-        border: 2.3px solid #E0E0E0 !important;
-        height: 20px !important;
-        width: 39px !important;
-    }
-}
+// @media (max-width: 460px) {
+//     .css-hqpog9 {
+//         border: 2.3px solid #E0E0E0 !important;
+//         height: 20px !important;
+//         width: 39px !important;
+//     }
+// }
 
 .css-hqpog9::after {
     background: #E0E0E0 !important;
@@ -821,20 +821,20 @@
     }
 }
 
-@media (max-width: 460px) {
-    .css-hqpog9::after {
-        top: 3px !important;
-        left: 21.5px !important;
-        width: 11px !important;
-        height: 11px !important;
-    }
-}
+// @media (max-width: 460px) {
+//     .css-hqpog9::after {
+//         top: 3px !important;
+//         left: 21.5px !important;
+//         width: 11px !important;
+//         height: 11px !important;
+//     }
+// }
 
-@media (max-width: 415px) {
-    .css-hqpog9::after {
-        top: 2.5px !important;
-    }
-}
+// @media (max-width: 415px) {
+//     .css-hqpog9::after {
+//         top: 2.5px !important;
+//     }
+// }
 
 .css-hqpog9::before {
     top: 9.3px !important;
@@ -864,20 +864,20 @@
     }
 }
 
-@media (max-width: 460px) {
-    .css-hqpog9::before {
-        top: 6.4px !important;
-        left: 25.3px !important;
-        width: 3.2px !important;
-        height: 3.2px !important;
-    }
-}
+// @media (max-width: 460px) {
+//     .css-hqpog9::before {
+//         top: 6.4px !important;
+//         left: 25.3px !important;
+//         width: 3.2px !important;
+//         height: 3.2px !important;
+//     }
+// }
 
-@media (max-width: 415px) {
-    .css-hqpog9::before {
-        top: 5.8px !important;
-    }
-}
+// @media (max-width: 415px) {
+//     .css-hqpog9::before {
+//         top: 5.8px !important;
+//     }
+// }
 
 /*--------------------- */
 
