finished confirmEmail component

--- a/src/scss/abstracts/_all.scss
+++ b/src/scss/abstracts/_all.scss
@@ -10,6 +10,7 @@
 @import '../components/settings';
 @import '../components/tasksLife';
 @import '../components/prettyButton';
+@import '../components/confirmEmail';
 
 @import '../components/registerForm';
 @import '../components/line';
