--- a/src/scss/components/_addTask.scss
+++ b/src/scss/components/_addTask.scss
@@ -14,7 +14,7 @@
     left: 100vw;
     bottom: 10.5vh;
     cursor: pointer;
-    margin-right: 15px;
+    margin-right: 22px;
     margin-top: -10px;
 
     &:hover {
@@ -54,6 +54,12 @@
     bottom: 50px;
 }
 
+@media (max-height: 800px) {
+    .addTask-absolute {
+        bottom: 3vh;
+    }
+}
+
 @media (max-width: 1399px) {
     .addTask.demo {
         margin-right: 15px;
@@ -73,6 +79,12 @@
         height: 65px;
         bottom: 2vh;
     }
+
+    @media (max-height: 800px) {
+        .addTask-absolute {
+            bottom: 3.1vh;
+        }
+    }
 }
 
 @media (max-width: 1199px) {
@@ -86,6 +98,7 @@
         width: 60px;
         height: 60px;
         bottom: 17vh;
+        margin-right: 11px;
     }
 
     .addTask-absolute.demo {
@@ -96,7 +109,13 @@
         width: 60px;
         height: 60px;
         right: 13px;
-        bottom: 1vh;
+        bottom: 2vh;
+    }
+
+    @media (max-height: 800px) {
+        .addTask-absolute {
+            bottom: 2vh;
+        }
     }
 }
 
@@ -105,6 +124,7 @@
         width: 56px;
         height: 56px;
         bottom: 20vh;
+        margin-right: 8px;
     }
 
     .addTask {
@@ -121,31 +141,46 @@
     .addTask-absolute {
         width: 56px;
         height: 56px;
-        right: 10px;
+        right: 8px;
+        bottom: 1vh;
     }
 }
 
 @media (max-width: 767px) {
+    .addTask.demo {
+        margin-right: 20px;
+    }
+
     .addTask {
         width: 64px;
         height: 64px;
         bottom: 11vh;
+        margin-right: 12px;
     }
 }
 
 @media (max-width: 460px) {
+    .addTask.demo {
+        margin-right: 10px;
+    }
+
     .addTask {
         width: 60px;
         height: 60px;
-        bottom: 18vh;
+        margin-right: 8px;
     }
 }
 
 @media (max-width: 415px) {
+    .addTask.demo {
+        margin-right: 6px;
+    }
+
     .addTask {
         width: 55px;
         height: 55px;
         bottom: 14vh;
+        margin-right: 6px;
     }
 }
 
