--- a/src/scss/components/_desk.scss
+++ b/src/scss/components/_desk.scss
@@ -643,9 +643,11 @@
     font-weight: 400;
     font-size: 17px;
     line-height: 24px;
+
     word-break: break-all;
     width: 95.1%;
     color: #8A8383;
+    text-align: justify;
 }
 
 @media (max-width: 1399px) {
@@ -699,6 +701,7 @@
     line-height: 24px;
     color: #8A8383;
     padding: 5px 6px;
+    text-align: justify;
 
     word-break: break-all;
     overflow-y: hidden;
