--- a/src/scss/components/_static.scss
+++ b/src/scss/components/_static.scss
@@ -33,7 +33,7 @@
 @media (max-height: 800px) {
     @media (max-width: 767px) {
         .demo {
-            margin: 0;
+            margin: 18px 0;
         }
     }
 }
@@ -84,7 +84,7 @@
 
 @media (max-height: 800px) {
     .demo__description {
-        margin: -28px 70px 23px 50px
+        margin: -20px 70px 23px 50px
     }
 }
 
