add mail confirm message

--- a/src/scss/components/_static.scss
+++ b/src/scss/components/_static.scss
@@ -188,3 +188,14 @@
         font-size: 21px;
     }
 }
+
+.demo__email_confirmed {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    opacity: 0.4;
+
+    color: #8A8383;
+    margin: 18px 15px 0 15px;
+}
