--- a/src/scss/components/_static.scss
+++ b/src/scss/components/_static.scss
@@ -197,11 +197,11 @@
     opacity: 0.4;
 
     color: #8A8383;
-    margin: 18px 15px 0 15px;
+    margin: 18px 15px 10px 15px;
 }
 
 @media (max-width: 767px) {
     .demo__email_confirmed {
-        margin: -30px 15px 0 15px;
+        margin: -30px 15px 10px 15px;
     }
 }
